--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1005,6 +1005,9 @@ body.modal-open {
 .register {
   color: white;
 }
+.register .flex {
+  padding-right: 40%;
+}
 
 .header-account .register {
   position: relative;
@@ -9943,6 +9946,12 @@ a.mapboxgl-ctrl-logo {
   }
 }
 @media only screen and (max-width: 991px) {
+  .main-header .main-menu .navigation > li > a {
+    padding: 0px !important;
+  }
+  .widget-tf-slider .slider-wrap .tf-slide-item .slide-item-image {
+    height: 400px;
+  }
   .banner-car-listing .title {
     font-size: 40px;
   }
@@ -10210,9 +10219,7 @@ a.mapboxgl-ctrl-logo {
     .icon-shape {
     left: 80px;
   }
-  .nav-outer {
-    display: none;
-  }
+
   .header-account {
     display: none;
   }
@@ -10253,6 +10260,9 @@ a.mapboxgl-ctrl-logo {
 @media only screen and (max-width: 767px) {
   .footer-bottom .bottom-bar-menu ul:first-child {
     flex-direction: column;
+  }
+  .nav-outer {
+    display: none;
   }
   .footer-bottom {
     grid-template-columns: 1fr;
@@ -10587,7 +10597,7 @@ a.mapboxgl-ctrl-logo {
 }
 @media only screen and (max-width: 600px) {
   .my-ads-container {
-    grid-template-columns: 1fr 1fr!important;
+    grid-template-columns: 1fr 1fr !important;
   }
   .tf-slider-v3 .slider-v3 h1 {
     line-height: 70px;
@@ -10888,9 +10898,6 @@ ul[aria-label="Pagination"] {
 }
 
 @media only screen and (max-width: 500px) {
-  .widget-tf-slider .slider-wrap .tf-slide-item .slide-item-image {
-    height: 400px;
-  }
   h6 {
     line-height: 24px;
   }
@@ -13096,7 +13103,6 @@ h6.title {
   text-align: center;
 }
 
-
 .my-ads-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -13127,7 +13133,7 @@ h6.title {
   color: #0a1426;
 }
 
-.balance-container{
+.balance-container {
   display: flex;
   justify-content: space-between;
   border: 1px solid lightgray;
@@ -13139,51 +13145,45 @@ h6.title {
   margin-top: 20px;
 }
 
-.balance-details{
-
+.balance-details {
 }
 
-.balance-title{
-
+.balance-title {
   font-size: 10px;
   color: var(--icon-color);
   line-height: 12px;
-
 }
 
-.balance-amount{
-
+.balance-amount {
 }
 
-.topup-balance{
-
+.topup-balance {
   border-radius: 10px;
   padding: 5px 10px;
   border: 1px solid;
   background-color: var(--icon-color);
   color: var(--text-wht-color);
   font-size: 12px;
-display: flex;
-align-items: center;
+  display: flex;
+  align-items: center;
   gap: 5px;
 }
-.tipp-create-new-ad{
+.tipp-create-new-ad {
   padding: 0px;
   height: 20px;
 }
-.tipp-create-new-ad a{
+.tipp-create-new-ad a {
   color: var(--red);
   font-size: 12px;
   line-height: 14px;
   text-decoration: underline;
 }
-.no-ads-message > p{
+.no-ads-message > p {
   font-size: 10px;
   color: var(--text-color);
   line-height: 14px;
-
 }
-.no-ads-message{
+.no-ads-message {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -13191,3 +13191,88 @@ align-items: center;
   margin-bottom: 80px;
   margin-top: 80px;
 }
+
+.profile-container .sign-details {
+  margin: 0px auto;
+  padding-top: 0px;
+}
+
+.add-new-number:hover {
+  cursor: pointer;
+  background-color: #00205c;
+  color: var(--text-wht-color);
+}
+.add-new-number {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+  margin-bottom: 16px;
+  border: 1px solid rgba(0, 0, 0, 0.26);
+  border-radius: 10px;
+  height: 56px;
+}
+
+.salon-profile.salon-template {
+  margin: 20px auto;
+}
+
+.header-navbar {
+  display: grid;
+  grid-template-columns: 6fr 4fr 2fr;
+}
+
+.on-profile-section {
+  background-color: white;
+  position: absolute;
+  bottom: 70px;
+  padding: 5px;
+  display: flex;
+  border-radius: 10px;
+  z-index: 99999;
+}
+.on-profile-section > div a svg {
+  padding-bottom: 0px;
+  font-size: 18px;
+  margin-right: 2px;
+}
+.on-profile-section > div a {
+  width: 55px;
+  display: flex;
+  align-items: center;
+}
+.on-profile-section > div {
+  padding: 10px;
+}
+
+.top-profile-section {
+  position: absolute;
+  bottom: -60px;
+  background-color: var(--red);
+  right: 70px;
+  padding: 5px;
+  display: flex;
+  border-radius: 10px;
+  z-index: 99999;
+}
+
+.top-profile-section > div a svg {
+  padding-bottom: 0px;
+  font-size: 24px;
+  margin-right: 2px;
+}
+
+.top-profile-section > div a {
+  width: 55px;
+  display: flex;
+  align-items: center;
+  font-size: 12px;
+}
+.top-profile-section > div {
+  padding: 10px;
+}
+.top-profile-section > div:first-child {
+  margin-right: 10px;
+}
+  
