--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -11410,9 +11410,8 @@ ul[aria-label="Pagination"] {
   font-size: 15px;
   text-align: center;
   width: 100%;
-  height: 50%;
+  height: 25%;
   color: black;
-  padding: 10px;
   font-weight: 400;
   display: flex;
   align-items: center;
@@ -13306,4 +13305,8 @@ gap: 20px;
 
 .header-login-text{
   text-wrap: nowrap;
+}
+
+.compare-icon-active{
+  color: var(--red);
 }
