--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -10265,9 +10265,13 @@ a.mapboxgl-ctrl-logo {
   .footer-bottom .bottom-bar-menu ul:first-child {
     flex-direction: column;
   }
-  .cat-container .splide__track{
-    margin-left: 0px!important;
-    margin-right: 0px!important;
+  .comparison-image {
+    width: 100% !important;
+    height: auto !important;
+  }
+  .cat-container .splide__track {
+    margin-left: 0px !important;
+    margin-right: 0px !important;
   }
   .nav-outer {
     display: none;
@@ -10290,7 +10294,6 @@ a.mapboxgl-ctrl-logo {
   .pad-right {
     padding-right: 15px;
   }
-  
 
   .index-slider-items img {
     height: 60% !important;
@@ -11386,7 +11389,7 @@ ul[aria-label="Pagination"] {
   justify-content: center;
   align-items: center;
   object-fit: cover;
-  padding:  10px;
+  padding: 10px;
 }
 
 .index-slider-items img {
@@ -11396,13 +11399,13 @@ ul[aria-label="Pagination"] {
   height: auto;
 }
 
-.cat-container .splide__track{
+.cat-container .splide__track {
   margin-left: 60px;
   margin-right: 60px;
 }
 
-.cat-sp img{
-  width: 60px ;
+.cat-sp img {
+  width: 60px;
 }
 
 .cat-container label {
@@ -11417,7 +11420,43 @@ ul[aria-label="Pagination"] {
   align-items: center;
   justify-content: center;
 }
+.comparison-li-feature {
+  padding: 5px 10px;
+  border-radius: 10px;
+  border: 1px solid lightgray;
+  margin: 5px;
+  font-size: 12px;
+  color: #000;
+}
 
+.comparison-container .comparison-li:first-child,
+.comparison-features-title {
+  font-size: 14px;
+  color: #848790 !important;
+}
+
+.comparison-container:first-child .comparison-li:not(:last-child) {
+  border-right: 1px solid lightgray;
+}
+
+.comparison-container:nth-of-type(2n) {
+  background-color: #f7f7f7;
+}
+
+.divider-right {
+  border-right: 1px solid lightgray;
+}
+
+.comparison-features-section:not(:last-child) {
+  border-right: 1px solid lightgray;
+}
+
+.comparison-features-section {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 10px;
+  margin-left: -1px;
+}
 #header-mobile-bottom {
   display: block;
   justify-content: center;
@@ -11686,7 +11725,7 @@ ul#navbar-mobile-bottom li {
   height: auto;
 }
 .desktop-hider {
-  display: none ;
+  display: none;
 }
 
 .image-desktop-hider {
@@ -12477,18 +12516,54 @@ input[type="number"] {
 
 .comparison-container {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 2fr 2fr;
+}
+
+.comparison-container:not(:first-child) .comparison-li:not(:last-child) {
+  border-right: 1px solid lightgray;
+}
+
+.comparison-container:first-child .comparison-li {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.compare-page {
+  margin-top: 40px;
+  margin-bottom: 40px;
+  border: 1px solid lightgray;
+  padding: 0px !important;
+}
+
+.comparison-features-title {
+  padding: 5px 10px;
+  color: #000;
+}
+
+.comparison-li:not(:first-child) {
 }
 
 .comparison-image {
   width: auto;
   height: 250px;
 }
-
+.comparison-li-price {
+  text-align: center;
+  font-size: 20px;
+  margin: 10px;
+  color: var(--red);
+}
 .comparison-li {
+  font-size: 14px;
+  border-bottom: 1px solid #ededed;
   padding: 5px 10px;
-  border: 1px solid #ededed;
   color: #000;
+  min-width: 100px;
+  text-wrap: wrap;
+}
+.comparison-features-title {
+  min-width: 100px;
 }
 .back-gr {
   background-color: var(--feature-bg) !important;
@@ -13294,19 +13369,19 @@ h6.title {
 .top-profile-section > div:first-child {
   margin-right: 10px;
 }
-.profil-images{
-display: flex;
-justify-content: center;
-gap: 20px;
+.profil-images {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
 }
 
-.new-date-ad{
+.new-date-ad {
 }
 
-.header-login-text{
+.header-login-text {
   text-wrap: nowrap;
 }
 
-.compare-icon-active{
+.compare-icon-active {
   color: var(--red);
 }
