--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -10273,6 +10273,13 @@ a.mapboxgl-ctrl-logo {
   align-items: center;
 }
 
+.comparison-ad-new-single{
+  height: 50vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .delete-comparison svg{font-size: 20px;}
 .delete-comparison{
   cursor: pointer;
